--- a/views/hr_tablas_lre.xml
+++ b/views/hr_tablas_lre.xml
@@ -36,7 +36,7 @@
 		</record>
 
 		<!-- model.name inherit form view -->
-		<record id="l10n_cl_hr.view_country_state_form" model="ir.ui.view">
+		<record id="method_hr_lre.view_country_state_form" model="ir.ui.view">
 			<field name="name">l10n.cl.hr.view.country.state.form</field>
 			<field name="model">res.country.state</field>
 			<field name="inherit_id" ref="base.view_country_state_form"/>
